# axum-play

./: .gitignore  Cargo.toml
db/: schema.sql
db/migrations/: 20240312062744_add_method_generate_custom_id.sql  20240312062744_initial.sql  20240401065823_create_user.sql
macros/: Cargo.toml
macros/src/: lib.rs
src/: main.rs
src/common/: error.rs  extractor.rs  mod.rs  response.rs  utils.rs
src/db/: extractors.rs
src/users/: db.rs  mod.rs  models.rs  routes.rs  schema.rs  views.rs
web-axum/: Cargo.toml
web-axum/db/migrations/: 20240401065823_create_user.sql
web-axum/src/: main.rs
web-axum/src/common/: error.rs  extractor.rs  mod.rs  response.rs  to_sql.rs
web-axum/src/db/: extractors.rs  mod.rs  query.rs
web-axum/src/users/: models.rs  routes.rs  schema.rs  views.rs
