[package]
name = "axum_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git" }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
serde_json="1.0.104"
tracing = "0.1.37"

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]


[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tokio-postgres]
version = "0.7.8"
features = ["with-chrono-0_4", "with-uuid-1"]

[dependencies.postgres-types]
version = "0.2.5"
features = ["derive"]

[dependencies.tower-http]
version = "0.4.3"
features = ["trace"]

[dependencies.validator]
version = "0.16.1"
features = ["derive"]

[dev-dependencies]
cargo-watch = "8.4.0"