[package]
name = "axum_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
serde_json="1.0.104"
tracing = "0.1.37"
http-body-util = "0.1.0"

[dependencies.axum]
version = "0.7.1"
features = ["macros"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter", "json"]


[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tokio-postgres]
version = "0.7.8"
features = ["with-chrono-0_4", "with-uuid-1"]

[dependencies.postgres-types]
version = "0.2.5"
features = ["derive"]

[dependencies.tower]
version = "0.4.3"
features = ["timeout"]

[dependencies.tower-http]
version = "0.5.0"
features = ["trace", "request-id", "sensitive-headers"]

[dependencies.validator]
version = "0.16.1"
features = ["derive"]

[dependencies.hyper]
version = "0.14.27"

[dev-dependencies]
cargo-watch = "8.4.0"