[package]
name = "web_axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
serde_json="1.0.104"
tracing = "0.1.37"
async-trait = "0.1.77"
regex = "1.9.5"
once_cell = "1.18.0"
base62 = "2.0.2"
macros = { path = "../macros" }

[dependencies.pbkdf2]
version = "0.12.2"
features = ["simple"]

[dependencies.axum]
version = "0.7.5"
features = ["macros"]

[dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter", "json"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

[dependencies.uuid]
version = "1.8.0"
features = [
    "v7",
    "fast-rng",
]

[dependencies.chrono]
version = "0.4.26"
features = ["serde"]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]

[dependencies.tokio-postgres]
version = "0.7.8"
features = ["with-chrono-0_4", "with-uuid-1"]

[dependencies.postgres-types]
version = "0.2.5"
features = ["derive"]

[dependencies.tower]
version = "0.4.3"
features = ["timeout"]

[dependencies.tower-http]
version = "0.5.0"
features = ["trace", "request-id", "sensitive-headers", "catch-panic"]

[dependencies.validator]
version = "0.16.1"
features = ["derive"]

[dependencies.serde_with]
version = "3.8.3"

[dev-dependencies]
cargo-watch = "8.4.0"